<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS 2 bridge for Execution-as-a-Service.
    Relays dispatch events from the EaaS container to ROS topics and forwards
    execution reports from ROS back to the dispatcher.
  </description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
